--- a/dashboard-new.html
+++ b/dashboard-new.html
@@ -8,10 +8,13 @@
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="css/dashboard-new.css" />
+  <link rel="stylesheet" href="css/modal.css" />
   <script src="https://cdn.jsdelivr.net/npm/chart.js@4.4.0/dist/chart.umd.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.2/gsap.min.js"></script>
+
+  <!-- App Logic -->
   <script src="js/common.js"></script>
-  <script defer src="js/dashboard-new.js"></script>
+  <script type="module" src="js/dashboard-new.js"></script>
 </head>
 <body>
   <header class="topbar">
@@ -21,78 +24,17 @@
     </div>
     <div class="topbar-right">
       <div class="user-menu">
-        <span class="user-name">Sachin MR</span>
-        <img src="https://i.pravatar.cc/80?img=12" alt="User" class="user-avatar" />
+        <span class="user-name">Loading...</span>
+        <img src="" alt="User" class="user-avatar" />
       </div>
     </div>
   </header>
 
-  <!-- Sidebar Container (embedded to avoid fetch/file:// issues) -->
-  <!-- Common Sidebar Navigation -->
   <aside class="sidebar">
     <nav class="sidebar-nav">
-      <a href="dashboard-new.html" class="nav-link" data-page="profile">
-        <svg class="nav-icon" width="20" height="20" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
-          <path d="M20 21v-2a4 4 0 0 0-4-4H8a4 4 0 0 0-4 4v2"></path>
-          <circle cx="12" cy="7" r="4"></circle>
-        </svg>
-        <span class="nav-text">Profile</span>
-      </a>
-      <a href="folders.html" class="nav-link" data-page="folders">
-        <svg class="nav-icon" width="20" height="20" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
-          <path d="M22 19a2 2 0 0 1-2 2H4a2 2 0 0 1-2-2V5a2 2 0 0 1 2-2h5l2 3h9a2 2 0 0 1 2 2z"></path>
-        </svg>
-        <span class="nav-text">Folders</span>
-      </a>
-      <a href="upcoming.html" class="nav-link" data-page="upcoming">
-        <svg class="nav-icon" width="20" height="20" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
-          <rect x="3" y="4" width="18" height="18" rx="2" ry="2"></rect>
-          <line x1="16" y1="2" x2="16" y2="6"></line>
-          <line x1="8" y1="2" x2="8" y2="6"></line>
-          <line x1="3" y1="10" x2="21" y2="10"></line>
-        </svg>
-        <span class="nav-text">Upcoming</span>
-        <span class="nav-badge" id="upcomingCount">15</span>
-      </a>
-      <a href="completed.html" class="nav-link" data-page="completed">
-        <svg class="nav-icon" width="20" height="20" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
-          <path d="M22 11.08V12a10 10 0 1 1-5.93-9.14"></path>
-          <polyline points="22 4 12 14.01 9 11.01"></polyline>
-        </svg>
-        <span class="nav-text">Completed</span>
-        <span class="nav-badge completed" id="completedCount">127</span>
-      </a>
-      <a href="settings.html" class="nav-link" data-page="settings">
-        <svg class="nav-icon" width="20" height="20" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
-          <circle cx="12" cy="12" r="3"></circle>
-          <path d="M19.4 15a1.65 1.65 0 0 0 .33 1.82l.06.06a2 2 0 0 1 0 2.83 2 2 0 0 1-2.83 0l-.06-.06a1.65 1.65 0 0 0-1.82-.33 1.65 1.65 0 0 0-1 1.51V21a2 2 0 0 1-2 2 2 2 0 0 1-2-2v-.09A1.65 1.65 0 0 0 9 19.4a1.65 1.65 0 0 0-1.82.33l-.06.06a2 2 0 0 1-2.83 0 2 2 0 0 1 0-2.83l.06-.06a1.65 1.65 0 0 0 .33-1.82 1.65 1.65 0 0 0-1.51-1H3a2 2 0 0 1-2-2 2 2 0 0 1 2-2h.09A1.65 1.65 0 0 0 4.6 9a1.65 1.65 0 0 0-.33-1.82l-.06-.06a2 2 0 0 1 0-2.83 2 2 0 0 1 2.83 0l.06.06a1.65 1.65 0 0 0 1.82.33H9a1.65 1.65 0 0 0 1-1.51V3a2 2 0 0 1 2-2 2 2 0 0 1 2 2v.09a1.65 1.65 0 0 0 1 1.51 1.65 1.65 0 0 0 1.82-.33l.06-.06a2 2 0 0 1 2.83 0 2 2 0 0 1 0 2.83l-.06.06a1.65 1.65 0 0 0-.33 1.82V9a1.65 1.65 0 0 0 1.51 1H21a2 2 0 0 1 2 2 2 2 0 0 1-2 2h-.09a1.65 1.65 0 0 0-1.51 1z"></path>
-        </svg>
-        <span class="nav-text">Settings</span>
-      </a>
+        <!-- Links will be dynamically updated based on active state -->
     </nav>
   </aside>
-
-  <script>
-    // Set active state based on current page
-    (function() {
-      const currentPage = window.location.pathname.split('/').pop().replace('.html', '') || 'dashboard';
-      const pageMap = {
-        'dashboard': 'profile',
-        'dashboard-new': 'profile',
-        'folders': 'folders',
-        'folder-detail': 'folders',
-        'upcoming': 'upcoming',
-        'completed': 'completed',
-        'settings': 'settings'
-      };
-      
-      const activePage = pageMap[currentPage] || 'profile';
-      const activeLink = document.querySelector(`.nav-link[data-page="${activePage}"]`);
-      if (activeLink) {
-        activeLink.classList.add('active');
-      }
-    })();
-  </script>
 
   <main class="main-container">
     <div class="page-header">
@@ -101,259 +43,60 @@
     </div>
 
     <section class="card profile-card">
-      <div class="profile-header">
-        <div class="profile-left">
-          <img src="https://i.pravatar.cc/120?img=12" alt="Profile" class="profile-photo" />
-          <div class="profile-info">
-            <h2 class="profile-name">Sachin MR</h2>
-            <p class="profile-bio">Productivity enthusiast · AI-powered goal achiever</p>
-          </div>
-        </div>
-        <div class="profile-stats">
-          <div class="stat-item">
-            <span class="stat-icon">🔥</span>
-            <div class="stat-content">
-              <div class="stat-value" data-target="47">0</div>
-              <div class="stat-label">Current Streak</div>
-            </div>
-          </div>
-          <div class="stat-divider"></div>
-          <div class="stat-item">
-            <span class="stat-icon">🏆</span>
-            <div class="stat-content">
-              <div class="stat-value" data-target="89">0</div>
-              <div class="stat-label">Highest Streak</div>
-            </div>
-          </div>
-        </div>
-      </div>
+      <!-- Profile content will be loaded dynamically -->
     </section>
 
-    <div class="cards-grid">
-      <div class="card analytics-card">
-        <div class="card-header">
-          <h3 class="card-title">Avg. Daily Completion</h3>
-          <span class="card-badge">This Week</span>
-        </div>
-        <div class="card-body">
-          <div class="big-number">
-            <span class="number-value" data-target="85">0</span>
-            <span class="number-unit">%</span>
-          </div>
-          <div class="mini-chart">
-            <canvas id="miniChart1"></canvas>
-          </div>
-        </div>
-      </div>
-
-      <div class="card analytics-card">
-        <div class="card-header">
-          <h3 class="card-title">Tasks Completed</h3>
-          <span class="card-badge">This Week</span>
-        </div>
-        <div class="card-body">
-          <div class="big-number">
-            <span class="number-value" data-target="42">0</span>
-            <span class="number-unit">tasks</span>
-          </div>
-          <div class="progress-ring-wrap">
-            <svg class="progress-ring" width="80" height="80">
-              <circle class="progress-ring-bg" cx="40" cy="40" r="32"></circle>
-              <circle class="progress-ring-fill" cx="40" cy="40" r="32" data-progress="78"></circle>
-            </svg>
-            <div class="progress-ring-text">78%</div>
-          </div>
-        </div>
-      </div>
-
-      <div class="card analytics-card">
-        <div class="card-header">
-          <h3 class="card-title">Active Folders</h3>
-          <span class="card-badge">3 folders</span>
-        </div>
-        <div class="card-body">
-          <div class="folder-list-mini">
-            <div class="folder-mini-item">
-              <span class="folder-dot" style="background: #FF6B35;"></span>
-              <span class="folder-mini-name">Morning Routine</span>
-            </div>
-            <div class="folder-mini-item">
-              <span class="folder-dot" style="background: #4A90E2;"></span>
-              <span class="folder-mini-name">Tablets</span>
-            </div>
-            <div class="folder-mini-item">
-              <span class="folder-dot" style="background: #7B68EE;"></span>
-              <span class="folder-mini-name">Pregnancy Check</span>
-            </div>
-          </div>
-        </div>
-      </div>
+    <div class="cards-grid" id="analytics-grid">
+      <!-- Analytics cards will be loaded here -->
     </div>
 
     <section class="section-header">
       <h2 class="section-title">Your Folders</h2>
-      <button class="btn-secondary">+ New Folder</button>
+      <button id="new-folder-btn" class="btn-secondary">+ New Folder</button>
     </section>
 
-    <div class="cards-grid">
-      <div class="card folder-card">
-        <div class="folder-card-header">
-          <div class="folder-icon" style="background: #FFE5D9;">
-            <svg width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="#FF6B35" stroke-width="2">
-              <path d="M22 19a2 2 0 0 1-2 2H4a2 2 0 0 1-2-2V5a2 2 0 0 1 2-2h5l2 3h9a2 2 0 0 1 2 2z"></path>
-            </svg>
-          </div>
-          <div class="folder-progress-ring">
-            <svg width="48" height="48">
-              <circle cx="24" cy="24" r="20" fill="none" stroke="#f0f0f0" stroke-width="4"></circle>
-              <circle cx="24" cy="24" r="20" fill="none" stroke="#FF6B35" stroke-width="4" stroke-dasharray="125.6" stroke-dashoffset="31.4" transform="rotate(-90 24 24)"></circle>
-            </svg>
-            <span class="folder-progress-text">75%</span>
-          </div>
-        </div>
-        <h3 class="folder-title">Morning Routine</h3>
-        <p class="folder-desc">Daily tasks to start the day right</p>
-        <div class="folder-meta">
-          <span class="folder-meta-item">
-            <svg width="14" height="14" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
-              <circle cx="12" cy="12" r="10"></circle>
-              <polyline points="12 6 12 12 16 14"></polyline>
-            </svg>
-            Updated 2h ago
-          </span>
-          <span class="folder-meta-item">8 tasks</span>
-        </div>
-      </div>
-
-      <div class="card folder-card">
-        <div class="folder-card-header">
-          <div class="folder-icon" style="background: #E3F2FD;">
-            <svg width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="#4A90E2" stroke-width="2">
-              <path d="M22 19a2 2 0 0 1-2 2H4a2 2 0 0 1-2-2V5a2 2 0 0 1 2-2h5l2 3h9a2 2 0 0 1 2 2z"></path>
-            </svg>
-          </div>
-          <div class="folder-progress-ring">
-            <svg width="48" height="48">
-              <circle cx="24" cy="24" r="20" fill="none" stroke="#f0f0f0" stroke-width="4"></circle>
-              <circle cx="24" cy="24" r="20" fill="none" stroke="#4A90E2" stroke-width="4" stroke-dasharray="125.6" stroke-dashoffset="50.24" transform="rotate(-90 24 24)"></circle>
-            </svg>
-            <span class="folder-progress-text">60%</span>
-          </div>
-        </div>
-        <h3 class="folder-title">Tablets</h3>
-        <p class="folder-desc">Medication schedule and reminders</p>
-        <div class="folder-meta">
-          <span class="folder-meta-item">
-            <svg width="14" height="14" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
-              <circle cx="12" cy="12" r="10"></circle>
-              <polyline points="12 6 12 12 16 14"></polyline>
-            </svg>
-            Updated 5h ago
-          </span>
-          <span class="folder-meta-item">5 tasks</span>
-        </div>
-      </div>
-
-      <div class="card folder-card">
-        <div class="folder-card-header">
-          <div class="folder-icon" style="background: #F3E5F5;">
-            <svg width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="#7B68EE" stroke-width="2">
-              <path d="M22 19a2 2 0 0 1-2 2H4a2 2 0 0 1-2-2V5a2 2 0 0 1 2-2h5l2 3h9a2 2 0 0 1 2 2z"></path>
-            </svg>
-          </div>
-          <div class="folder-progress-ring">
-            <svg width="48" height="48">
-              <circle cx="24" cy="24" r="20" fill="none" stroke="#f0f0f0" stroke-width="4"></circle>
-              <circle cx="24" cy="24" r="20" fill="none" stroke="#7B68EE" stroke-width="4" stroke-dasharray="125.6" stroke-dashoffset="12.56" transform="rotate(-90 24 24)"></circle>
-            </svg>
-            <span class="folder-progress-text">90%</span>
-          </div>
-        </div>
-        <h3 class="folder-title">Pregnancy Check</h3>
-        <p class="folder-desc">Health tracking and appointments</p>
-        <div class="folder-meta">
-          <span class="folder-meta-item">
-            <svg width="14" height="14" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
-              <circle cx="12" cy="12" r="10"></circle>
-              <polyline points="12 6 12 12 16 14"></polyline>
-            </svg>
-            Updated 1d ago
-          </span>
-          <span class="folder-meta-item">10 tasks</span>
-        </div>
-      </div>
+    <div class="cards-grid" id="folders-grid">
+        <!-- Folder cards will be dynamically inserted here -->
     </div>
 
     <section class="section-header">
       <h2 class="section-title">Today's Tasks</h2>
       <div class="filter-tabs">
-        <button class="tab-btn active">All</button>
-        <button class="tab-btn">Today</button>
-        <button class="tab-btn">Completed</button>
+        <!-- Filter tabs will be functional for tasks -->
       </div>
     </section>
 
-    <div class="card task-list-card">
-      <div class="task-row">
-        <label class="task-checkbox">
-          <input type="checkbox" checked />
-          <span class="checkmark"></span>
-        </label>
-        <div class="task-content">
-          <span class="task-title completed">Morning Workout</span>
-          <span class="task-time">7:00 AM</span>
-        </div>
-        <div class="task-due-bar" style="background: #4CAF50;"></div>
-      </div>
-
-      <div class="task-row">
-        <label class="task-checkbox">
-          <input type="checkbox" />
-          <span class="checkmark"></span>
-        </label>
-        <div class="task-content">
-          <span class="task-title">Project Review Meeting</span>
-          <span class="task-time">10:00 AM</span>
-        </div>
-        <div class="task-due-bar" style="background: #FF9800;"></div>
-      </div>
-
-      <div class="task-row">
-        <label class="task-checkbox">
-          <input type="checkbox" />
-          <span class="checkmark"></span>
-        </label>
-        <div class="task-content">
-          <span class="task-title">Team Sync Call</span>
-          <span class="task-time">2:00 PM</span>
-        </div>
-        <div class="task-due-bar" style="background: #2196F3;"></div>
-      </div>
-
-      <div class="task-row">
-        <label class="task-checkbox">
-          <input type="checkbox" />
-          <span class="checkmark"></span>
-        </label>
-        <div class="task-content">
-          <span class="task-title">Code Review</span>
-          <span class="task-time">4:30 PM</span>
-        </div>
-        <div class="task-due-bar" style="background: #9C27B0;"></div>
-      </div>
-
-      <div class="task-row">
-        <label class="task-checkbox">
-          <input type="checkbox" />
-          <span class="checkmark"></span>
-        </label>
-        <div class="task-content">
-          <span class="task-title">Evening Walk</span>
-          <span class="task-time">6:00 PM</span>
-        </div>
-        <div class="task-due-bar" style="background: #00BCD4;"></div>
-      </div>
+    <div class="card task-list-card" id="task-list-container">
+        <!-- Task rows will be dynamically inserted here -->
     </div>
   </main>
+
+  <!-- The Modal -->
+  <div id="new-folder-modal" class="modal">
+    <div class="modal-content">
+      <div class="modal-header">
+        <span class="close-button">&times;</span>
+        <h2>Create New Folder</h2>
+      </div>
+      <div class="modal-body">
+        <form id="new-folder-form">
+          <div class="form-group">
+            <label for="folder-name">Folder Name</label>
+            <input type="text" id="folder-name" required>
+          </div>
+          <div class="form-group">
+            <label for="folder-description">Description</label>
+            <textarea id="folder-description" rows="3"></textarea>
+          </div>
+          <div class="form-group">
+            <label for="folder-color">Folder Color</label>
+            <input type="color" id="folder-color" value="#FF6B35">
+          </div>
+          <button type="submit" class="btn-primary">Save Folder</button>
+        </form>
+      </div>
+    </div>
+  </div>
+
 </body>
 </html>
