--- a/index.html
+++ b/index.html
@@ -9,7 +9,9 @@
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="css/login.css" />
   <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.2/gsap.min.js"></script>
-  <script defer src="js/app.js"></script>
+
+  <!-- App Logic -->
+  <script type="module" src="js/app.js"></script>
 </head>
 <body>
 
@@ -29,7 +31,7 @@
       <div class="card fade-in" id="loginCard" role="region" aria-label="Login form">
         <h2>Welcome back</h2>
         <p class="subtitle">Stay on track with your goals and streaks</p>
-        <form class="form" autocomplete="on">
+        <form class="form" id="login-form" autocomplete="on">
           <div class="form-group">
             <label for="email">Email</label>
             <input type="email" id="email" name="email" placeholder="you@example.com" required />
@@ -55,7 +57,7 @@
             <span>or</span>
           </div>
 
-          <button type="button" class="btn-google" aria-label="Continue with Google">
+          <button type="button" id="google-signin" class="btn-google" aria-label="Continue with Google">
             <svg class="g-icon" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 533.5 544.3" aria-hidden="true">
               <path fill="#EA4335" d="M533.5 278.4c0-18.6-1.7-37-5-54.8H272v103.8h146.9c-6.3 34.3-25.2 63.3-53.8 82.8v68h86.7c50.8-46.8 80.7-115.8 80.7-199.8z"/>
               <path fill="#34A853" d="M272 544.3c72.9 0 134.2-24.1 178.9-65.1l-86.7-68c-24.1 16.2-55 25.8-92.2 25.8-70.8 0-130.8-47.8-152.3-112h-90.4v70.3C72.5 487.3 166.6 544.3 272 544.3z"/>
