--- a/register.html
+++ b/register.html
@@ -9,7 +9,7 @@
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="css/login.css">
   <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.2/gsap.min.js"></script>
-  <script defer src="js/register.js"></script>
+  <script defer type="module" src="js/register.js"></script>
 </head>
 <body>
   <div class="layout">
