--- a/folders.html
+++ b/folders.html
@@ -8,6 +8,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="css/dashboard-new.css" />
+    <link rel="stylesheet" href="css/folders.css" />
     <script src="https://cdn.jsdelivr.net/npm/chart.js@4.4.0/dist/chart.umd.min.js"></script>
 </head>
 <body>
@@ -63,7 +64,7 @@
     <div class="modal-overlay" id="folderModal">
         <div class="modal-content">
             <div class="modal-header">
-                <h2 class="modal-title">Create New Folder</h2>
+                <h2 class="modal-title" id="modalTitle">Create New Folder</h2>
                 <button class="modal-close" id="closeModal">&times;</button>
             </div>
             <form class="modal-form" id="folderForm">
