Refactor: centralize topbar/sidebar UI, consolidate user data & Firebase usage
- Replace duplicated hardcoded topbar/sidebar markup in HTML pages with dynamic placeholders
- Add getUserData helper and renderHeader/renderSidebar functions (app.js, dashboard-new.js, folder-detail.js, folders.js, upcoming.js) to populate topbar and sidebar from Firestore data
- Update Firestore imports/queries (batch fetch user, folders, tasks) and wire logout functionality into rendered header
- Persist newly registered users to Firestore (register.js) and improve initial seeding logic (dashboard-new.js)
- Reset hardcoded sidebar counters and remove several legacy page-specific CSS files (completed.css, login.css, upcoming.css); add comprehensive register.css and include Font Awesome in pages
- Misc: minor GSAP animation tidy-ups and cleanup of inline Firebase/auth scripts from HTML

--- a/dashboard-new.html
+++ b/dashboard-new.html
@@ -17,16 +17,7 @@
 </head>
 <body>
   <header class="topbar">
-    <div class="topbar-left">
-      <img src="assets/logo.svg" alt="LifeTrack AI" class="logo" />
-      <span class="brand-name">LifeTrack AI</span>
-    </div>
-    <div class="topbar-right">
-      <div class="user-menu">
-        <span class="user-name">Loading...</span>
-        <img src="" alt="User" class="user-avatar" />
-      </div>
-    </div>
+    <!-- Topbar content will be loaded here -->
   </header>
 
   <aside class="sidebar">
