--- a/folder-detail.html
+++ b/folder-detail.html
@@ -7,12 +7,18 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css" />
     <link rel="stylesheet" href="css/dashboard-new.css" />
     <link rel="stylesheet" href="css/folder-detail.css" />
 </head>
 <body>
-    <header class="topbar"></header>
-    <aside class="sidebar"></aside>
+    <header class="topbar">
+        <!-- Topbar content will be loaded here -->
+    </header>
+    
+    <aside class="sidebar">
+        <nav class="sidebar-nav"><!-- Dynamically updated --></nav>
+    </aside>
 
     <main class="main-container">
         <a href="folders.html" class="back-link">
