--- a/folders.html
+++ b/folders.html
@@ -7,16 +7,19 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css" />
     <link rel="stylesheet" href="css/dashboard-new.css" />
     <link rel="stylesheet" href="css/folders.css" />
     <script src="https://cdn.jsdelivr.net/npm/chart.js@4.4.0/dist/chart.umd.min.js"></script>
 </head>
 <body>
-    <!-- Topbar will be loaded by common.js -->
-    <header class="topbar"></header>
+    <header class="topbar">
+        <!-- Topbar content will be loaded here -->
+    </header>
 
-    <!-- Sidebar will be loaded by common.js -->
-    <aside class="sidebar"></aside>
+    <aside class="sidebar">
+        <nav class="sidebar-nav"><!-- Dynamically updated --></nav>
+    </aside>
 
     <main class="main-container">
         <!-- Main Header -->
